--- a/css/gel/default.css
+++ b/css/gel/default.css
@@ -86,6 +86,8 @@ visibility: hidden;
 position: relative;
 }
 .graph {
-width:950px;
-height:450px;
+    width: 95vw;
+    height: 80vh;
+    max-width: 100%;
+    margin: 0 auto;
 }
